--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.2",
     "vue-router": "^3.4.9",
     "vuetify": "^2.2.11",
+    "vuetify-datetime-picker": "^2.1.1",
     "vuex": "^3.6.0",
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
